# moviesda

./: README.md  buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/ci/: import_smoke_test.py
.github/workflows/: build-android.yml  build.yml
moviesda_app/: __init__.py  main.py  state.py
moviesda_app/services/: downloader.py  queue_manager.py  source.py
moviesda_app/ui/: __init__.py  screens.py
p4a_recipes/libthorvg/: __init__.py
src/moviesda_app/: config.py  main.py  models.py  state.py
src/moviesda_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/moviesda_app/services/: __init__.py  downloader.py  queue_manager.py  source.py
src/moviesda_app/ui/: app.kv  screens.py
