[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moviesda-app"
version = "0.1.0"
description = "KivyMD mobile app with configurable scraping and downloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "kivy>=2.3.0",
  "kivymd @ git+https://github.com/kivymd/KivyMD.git",
  "requests>=2.32.3",
  "plyer>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "watchdog>=6.0.0",
]

[project.scripts]
moviesda-app = "moviesda_app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
